Changelog
=========


1.0.2 (unreleased)
------------------

- Nothing changed yet.


1.0.1 (2016-09-26)
------------------

- Fix chameleon support. [jone]


1.0.0 (2016-09-26)
------------------

- Initial release.