@@ -49,6 +49,7 @@ setup(name='ftw.contentnav',
           'setuptools',
           'ftw.profilehook',
           'ftw.upgrade',
+          'plone.api',
           'plone.behavior',
           'plone.dexterity',
           'plone.app.dexterity',
