@@ -5,7 +5,8 @@ Changelog
 1.0.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Strip duplicates when adding new categories through the edit
+  form. [mbaechtold]
 
 
 1.0.1 (2016-09-26)
